fix whitebox overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -48,7 +48,6 @@ body {
 .whitebox{
     background-color: #000;
     border: 1px solid #000000;
-    overflow: hidden;
     -webkit-filter: grayscale(100%); /* Chrome, Safari, Opera */
     filter: grayscale(100%);
     -webkit-transition: all 2s ease; /* For Safari 3.1 to 6.0 */
@@ -60,7 +59,6 @@ body {
     border-color: #44e020;
     -webkit-filter: grayscale(0%); /* Chrome, Safari, Opera */
     filter: grayscale(0%);
-    overflow: hidden;
 }
 /*.whitebox img{
     width: auto;
